# beyondml

./: .gitignore  BeyondML_Business_Strategy.docx  README.md  automl_workflow.html  benchmark_results.md  pyproject.toml  tui_app.py
beyondml/: __init__.py  charts.py  cli.py  state.py
beyondml/agents/: __init__.py  eda_agent.py  evaluator_agent.py  feature_agent.py  ga_trainer.py  orchestrator.py  outlier_agent.py  reflection_agent.py
beyondml/engine/: __init__.py  benchmarker.py  genetic.py  metrics.py  profiler.py  supervised.py  tracing.py  unsupervised.py
beyondml/llm/: __init__.py  base.py  groq_provider.py  ollama_provider.py  validation.py
data/: main.py  test_beyondml.py
data/agentic/: orchestrator.py  reasoning_engine.py
data/evaluation/: metrics.py  observability.py
data/modeling/: genetic_algorithm.py  supervised_engine.py  unsupervised_engine.py
data/models/: linearregression_best.pkl
data/profiling/: profiler.py  test.ipynb  test.py
data/reports/: ga_report_20260215_124011.json
tests/: conftest.py  test_genetic.py  test_llm.py  test_metrics.py  test_profiler.py  test_supervised.py  test_tracing_validation.py  test_unsupervised.py
